syntax = "proto3";

service Backend {
	rpc CreateBackend(CreateBackendRequest) returns (CreateBackendResponse) {}
	rpc GetBackend(GetBackendRequest) returns (GetBackendResponse) {}
	rpc ListBackend(ListBackendRequest) returns (ListBackendResponse) {}
	rpc UpdateBackend(UpdateBackendRequest) returns (UpdateBackendResponse) {}
	rpc DeleteBackend(DeleteBackendRequest) returns (DeleteBackendResponse) {}
	rpc ListType(ListTypeRequest) returns (ListTypeResponse) {}

}

message CreateBackendRequest {
	string context = 1;
	BackendDetail backend = 2;
}

message CreateBackendResponse {
	BackendDetail backend = 1;
}

message GetBackendRequest {
	string context = 1;
	string id = 2;
}

message GetBackendResponse {
	BackendDetail backend = 1;
}

message ListBackendRequest {
	string context = 1;
	int32 limit = 2;
	int32 offset = 3;
	repeated string sortKeys = 4;
	repeated string sortDirs = 5;
	map<string, string> Filter = 6;
}

message ListBackendResponse {
	repeated BackendDetail backends = 1;
	int32 next = 2;
}

message UpdateBackendRequest {
	string context = 1;
	string id = 2;
	string access = 4;
	string security = 5;
}

message UpdateBackendResponse {
	BackendDetail backend = 1;
}

message DeleteBackendRequest {
	string context = 1;
	string id = 2;
}

message DeleteBackendResponse {
}

message BackendDetail {
	string id = 1;
	string tenantId = 2;
	string userId = 3;
	string name = 4;
	string type = 5;
	string region = 6;
	string endpoint = 7;
	string bucketName = 8;
	string access = 9;
	string security = 10;
}

message ListTypeRequest {
	string context = 1;
	int32 limit = 2;
	int32 offset = 3;
	repeated string sortKeys = 4;
	repeated string sortDirs = 5;
	map<string, string> Filter = 6;
}

message ListTypeResponse {
	repeated TypeDetail types = 1;
	int32 next = 2;
}

message TypeDetail {
	string name = 1;
	string description = 2;
}

